css/site.css
/* ... */
.features-comparison {
  margin-top: 110px;
}

.features-comparison__header {
  font-weight: bold;
  font-size: 32px;
  line-height: 42px;
  margin-bottom: 40px;
}

.features-comparison__table {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
  background: #FFFFFF;
  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.1);
  border-radius: 8px 8px 10px 10px;
}

.features-comparison__table-header {
  font-family: PT Sans Caption;
  font-weight: bold;
  font-size: 20px;
  line-height: 26px;
}

.features-comparison__table-header-cell {
  padding: 47px 60px 25px;
}

.features-comparison__table-header-cell_opportunities {
  width: 720px;
  text-align: left;
}

.features-comparison__table-header-cell_mark {
  width: 240px;
  text-align: center;
}

.features-comparison__table-cell {
  border-bottom: 2px solid #EAEAEA;
  padding: 20px 60px;
}

.features-comparison__table-cell_mark {
  text-align: center;
}

.features-comparison__table-body {
  line-height: 24px;
}

.features-comparison__minus {
  background-image: url("../img/minus.svg");
  background-repeat: no-repeat;
  width: 20px;
  height: 5px;
  display: inline-block;
  background-size: cover;
  margin-bottom: 4px;
}

.features-comparison__check {
  background-image: url("../img/check-green.svg");
  background-repeat: no-repeat;
  width: 20px;
  height: 15px;
  display: inline-block;
  background-size: cover;
}

.slider {
  margin-top: 40px;
}

.slider__container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.slider__img-container {
  position: relative;
  width: 792px;
  height: 520px;
}

.slider__image_real {
  position: relative;
  z-index: 3;
}

.slider__image_fake {
  position: absolute;
}

.slider__image_fake:nth-child(2) {
  top: 8px;
  left: 8px;
  z-index: 2;
}

.slider__image_fake:nth-child(3) {
  top: 16px;
  left: 16px;
  z-index: 1;
}

.slider__button {
  width: 102px;
  height: 80px;
  border-radius: 170px;
  border-width: 0;
  background-repeat: no-repeat;
  background-position: center;
}

.slider__button_left {
  background-color: #FF6600;
  background-image: url("../img/arrow-left.svg");
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.slider__button_right {
  background-color: #E2E2E2;
  background-image: url("../img/arrow-right.svg");
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
}

.slider__points-container {
  display: flex;
  margin: 0;
  padding: 0;
  margin-top: 40px;
  gap: 24px;
  justify-content: center;
}

.slider__point {
  list-style-type: none;
  width: 10px;
  height: 10px;
  background-color: #999999;
  border-radius: 50%;
}

.slider__point_active {
  background-color: #FF6600;
}

.trial {
  margin-top: 110px;
}

.trial__header {
  font-family: PT Sans Caption;
  font-weight: bold;
  font-size: 32px;
  line-height: 42px;
  margin-bottom: 50px;
}

.trial__accent {
  color: #FF6600;
  font-style: normal;
}

.trial__inputs-container {
  display: flex;
  gap: 24px;
  justify-content: center;
}

.trial__input {
  width: 384px;
  height: 64px;
  padding: 16px 28px;
  border: 1px solid #B6B6B6;
  border-radius: 5px;
  color: #6F6F6F;
}

.trial__note {
  font-family: PT Sans;
  font-size: 14px;
  line-height: 29px;
  color: #6F6F6F;
  margin-bottom: 33px;
  display: block;
}

.trial__submit-container {
  display: flex;
  gap: 30px;
  align-items: center;
}

.trial__agreement {
  font-size: 14px;
  line-height: 20px;
  color: #6F6F6F;
  margin: 0;
}

.trial__link {
  color: #FF6600;
}

.statistics {
  margin-top: 132px;
}

.statistics__header {
  margin-bottom: 45px;
  font-family: PT Sans Caption;
  font-weight: bold;
  font-size: 32px;
  line-height: 42px;
}

.statistics__columns-container {
  display: flex;
  align-items: center;
}

.statistics__list {
  display: grid;
  grid-template-columns: 320px 330px;
  grid-template-rows: auto;
  gap: 40px 10px;
  padding: 0;
  margin: 0;
}

.statistics__list-header {
  font-family: PT Sans Caption;
  font-weight: bold;
  font-size: 32px;
  line-height: 56px;
  color: #178A00;
  margin: 0;
  padding: 0;
}

.statistics__list-item {
  margin: 0;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.statistics__list-text {
  font-size: 20px;
  line-height: 30px;
  margin: 0;
  padding: 0;
}

.statistics__link {
  margin-top: 31px;
  display: inline-block;
  font-family: PT Sans Caption;
  font-weight: bold;
  font-size: 14px;
  line-height: 18px;
  color: #F76201;
}

.statistics__image {
  width: 464px;
  height: 333px;
}

.other-products {
  margin-top: 122px;
}

.other-products__list-item-columns-container {
  display: flex;
  gap: 44px;
  margin-bottom: 26px;
}

.other-products__list-item-icon {
  display: inline-block;
  width: 50px;
  height: 50px;
  background-repeat: no-repeat;
}

.other-products__list-item-icon_rose {
  background-image: url("../img/rose.svg");
}

.other-products__list-item-icon_book {
  background-image: url("../img/book.svg");
  width: 82px;
}

.other-products__list-item-icon_files {
  background-image: url("../img/files.svg");
}

.other-products__header {
  font-family: PT Sans Caption;
  font-weight: bold;
  font-size: 32px;
  line-height: 42px;
  padding: 0;
  margin: 0;
  margin-bottom: 82px;
}

.other-products__columns-container {
  display: flex;
  gap: 81px;
  margin: 0;
  padding: 0;
}

.other-products__column {
  list-style-type: none;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.other-products__column:nth-child(1) {
  flex-basis: 328px;
}

.other-products__column:nth-child(2) {
  flex-basis: 333px;
}

.other-products__column:nth-child(3) {
  flex-basis: 345px;
}

.other-products__list-item-header {
  margin: 0;
}

.other-products__list-item-header_small {
  flex-basis: 151px;
}

.other-products__list-item-text {
  margin: 0;
  margin-bottom: 15px;
  line-height: 24px;
}

.other-products__list-item-link {
  font-family: PT Sans Caption;
  font-weight: bold;
  font-size: 14px;
  line-height: 18px;
  color: #F76201;
}

